--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -267,3 +267,11 @@ h2{
 		transform: translatey(0px);
 	}
 }
+
+@media only screen and (max-width: 667px) {
+    .house {
+        /* display: none; */
+        height: 100px;
+        width: 100px;
+    }
+}
