--- a/docs/css/style.css
+++ b/docs/css/style.css
@@ -233,7 +233,7 @@ h2{
     margin:10px;
 }
 #sprites-info{
-    height:100%;;
+    height:100%;
     justify-content: space-around;
     align-items: center;
 }
